[#51496585]-improved agent creation

--- a/app/views/admin/agents/_form.html.erb
+++ b/app/views/admin/agents/_form.html.erb
@@ -24,45 +24,41 @@
     </div>
   </div>
 
-  <% unless @agent.has_club_roles? %>
-    <div class="control-group">
-      <%= f.label :roles, 'Global Roles', :class => 'control-label' %>
-      <div class="controls">
-        <% Agent::ROLES.each do |role| %>
-          <%= label_tag nil, role, class: 'checkbox' do %>
-            <%= check_box_tag "agent[roles][]", role, @agent.has_role?(role), id: "agent_roles_#{role}" %>
-            <%= role -%>
-          <% end %>
+  <div class="control-group" id="div_agent_roles">
+    <%= f.label :roles, 'Global Roles', :class => 'control-label' %>
+    <div class="controls">
+      <% Agent::ROLES.each do |role| %>
+        <%= label_tag nil, role, class: 'checkbox' do %>
+          <%= check_box_tag "agent[roles][]", role, @agent.has_role?(role), id: "agent_roles_#{role}" %>
+          <%= role -%>
         <% end %>
-      </div>
+      <% end %>
     </div>
-  <% end %>
+  </div>
 
-  <% if not f.object.new_record? and not @agent.has_global_role? %>
-    <div class="control-group">
-      <%= f.label :club_roles, 'Club Roles', :class => 'control-label' %>
-      <div class="controls">
-        <table class="table table-bordered table-condensed" style="width:600px; margin-top: 10px;" id="club_role_table">
-          <tr><td colspan="3"> <%= link_to 'Add', '#', :class => 'btn', :id=> "add_new_club_role" %> </td></tr>
-          <tr><th>Role</th><th>Club</th><th style="width:100px;">&nbsp;</th></tr>
-          <%= f.fields_for :club_roles, @agent.club_roles do |role| %>
-            <tr>
-              <td><%= role.object.role %></td>
-              <td><%= role.object.club_id %> <%= role.object.club.name %></td>
-              <td>Delete &nbsp;<%= role.check_box '_destroy' %></td>
-            </tr>
-          <% end %>
-          <%= f.fields_for :club_roles, @agent.club_roles.build do |role| %>
-            <tr>
-              <td><%= role.select :role, Agent::ROLES, include_blank: true %></td>
-              <td><%= role.select :club_id, options_from_collection_for_select(@clubs, "id", "name") %></td>
-              <td></td>
-            </tr>
-          <% end %>
-        </table>
-      </div>
+  <div class="control-group">
+    <%= f.label :club_roles, 'Club Roles', :class => 'control-label' %>
+    <div class="controls">
+      <table class="table table-bordered table-condensed" style="width:600px; margin-top: 10px;" id="club_role_table">
+        <tr><td colspan="3"> <%= link_to 'Add', '#', :class => 'btn', :id=> "add_new_club_role" %> </td></tr>
+        <tr><th>Role</th><th>Club</th><th style="width:100px;">&nbsp;</th></tr>
+        <%= f.fields_for :club_roles, @agent.club_roles do |role| %>
+          <tr>
+            <td><%= role.object.role %></td>
+            <td><%= role.object.club_id %> <%= role.object.club.name %></td>
+            <td>Delete &nbsp;<%= role.check_box '_destroy' %></td>
+          </tr>
+        <% end %>
+        <%= f.fields_for :club_roles, @agent.club_roles.build do |role| %>
+          <tr>
+            <td><%= role.select :role, Agent::ROLES, include_blank: true %></td>
+            <td><%= role.select :club_id, options_from_collection_for_select(@clubs, "id", "name") %></td>
+            <td></td>
+          </tr>
+        <% end %>
+      </table>
     </div>
-  <% end %>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
@@ -73,6 +69,5 @@
 
 
 <script>
-  hola = "<%= Club.all.collect &:name %>"
   $(document).ready(admin_form_functions());
 </script>
