--- a/app/views/fulfillments/files.html.erb
+++ b/app/views/fulfillments/files.html.erb
@@ -1,5 +1,4 @@
-  <section>
-    <div class="page-header">
+  <section> <div class="page-header">
       <h1>Fulfillment files</h1>
     </div>
   </section>
