--- a/app/views/members/manual_billing.html.erb
+++ b/app/views/members/manual_billing.html.erb
@@ -13,9 +13,9 @@
 			</td>
 		</tr>
 		<tr>
-			<th colspan=2>
-        <%= submit_tag t('buttons.manual_billing'), :class => 'btn btn-primary' %>
-        <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> 
+			<th colspan="2">
+		        <%= submit_tag t('buttons.manual_billing'), :class => 'btn btn-primary' %>
+		        <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> 
 			</th>
 		</tr>
 	</table>
