--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -2,20 +2,22 @@
 <%= form_for @operation, :as => :operation, :url => operation_path(:id => @operation) do |f|%>
 <table class="table table-bordered">
 	<tr>
-	  <td colspan="2"> <%= t('activerecord.attributes.operation.operation_date') %>: <%= @operation.operation_date %></td>
+		<td colspan="2"> <%= t('activerecord.attributes.operation.operation_date') %>: <%= @operation.operation_date %></td>
 	</tr>
 	<tr> 
-	  <td> <%= t('activerecord.attributes.operation.description') %>: <%= @operation.description.html_safe %> </td>
-	  <td> <%= t('activerecord.attributes.operation.created_by') %>: <%= @operation.created_by.username %> </td>
+		<td> <%= t('activerecord.attributes.operation.description') %>: <%= @operation.description.html_safe %> </td>
+		<td> <%= t('activerecord.attributes.operation.created_by') %>: <%= @operation.created_by.username %> </td>
 	</tr>
-	<tr> 
-	  <tr>
-	  	<td colspan="3"> <%= f.text_area :notes, :value => @operation.notes, :style => 'width: 99%; height: 150px' %> </td>
-	  </tr>
-	  <tr>
-	    <td colspan="2"> <%= f.submit t('buttons.save_operation_note'), :class => 'btn btn-primary' %>
-	         <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
-	  </tr>
-	</tr> 
+	<tr>
+		<td colspan="2">
+			<%= f.text_area :notes, :value => @operation.notes, :style => 'width: 99%; height: 150px' %>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			<%= f.submit t('buttons.save_operation_note'), :class => 'btn btn-primary' %>
+			<%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %>
+		</td>
+	</tr>
 </table>
-<% end%>
+<% end %>
