Updated css to put the pagination bar at the left side

--- a/app/assets/stylesheets/readable.css
+++ b/app/assets/stylesheets/readable.css
@@ -32,7 +32,8 @@
 
 #partners_table_wrapper.dataTables_wrapper .dataTables_paginate,
 #agents_table_wrapper.dataTables_wrapper .dataTables_paginate,
-#my_clubs_table_wrapper.dataTables_wrapper .dataTables_paginate {
+#my_clubs_table_wrapper.dataTables_wrapper .dataTables_paginate,
+#terms_of_memberships_table_wrapper.dataTables_wrapper .dataTables_paginate {
 	float: left;
 }
 
