--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -184,8 +184,9 @@ div.dataTables_filter input {
 
 #partners_table_wrapper.dataTables_wrapper .dataTables_paginate,
 #agents_table_wrapper.dataTables_wrapper .dataTables_paginate,
-#my_clubs_table_wrapper.dataTables_wrapper .dataTables_paginate {
-	float: left;
+#my_clubs_table_wrapper.dataTables_wrapper .dataTables_paginate,
+#terms_of_memberships_table_wrapper.dataTables_wrapper .dataTables_paginate {
+  float: left;
 }
 
 #club_cash_transactions_table_wrapper.dataTables_wrapper #club_cash_transactions_table_filter.dataTables_filter,
