--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -1,35 +1,132 @@
+<style type="text/css">
+  h3.wizard_step {
+    line-height: 17px;
+  }
 
-<div class="control-group">
-  <%= f.label :name, :class => 'control-label' %>
-  <div class="controls">
-    <%= f.text_field :name, :class => 'text_field', :value => '' %>
-    <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.product.package_help')} %> 
+  .wizard_step_circle {    
+    background: #eeeeee;
+    color: black;
+    font-size: 24px;
+    border: 2px solid #ddd;
+    border-radius: 50px;
+    width: 17px;
+    height: 17px;
+    margin: 3px;
+    display: inline-block;
+    padding: 3px;
+    text-align: center;
+    font-weight: bold;
+  }
+
+  .wizard_step_circle.step_selected {
+    background: #0055cc;
+    color: white;
+    border-color: #ddd;
+  }
+</style>
+
+
+
+<div class="step" id="first">
+  <div class="control-group">
+    <h3 class="wizard_step">
+      <span>Step </span>
+      <span class="wizard_step_circle step_selected">1</span>
+      <span class="wizard_step_circle">2</span>
+      <span class="wizard_step_circle">3</span>
+    </h3>
+  </div>
+  <div class="control-group">
+    <%= f.label :name, 'Suscription Plan Name', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'text_field', :value => '' %>
+      <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.product.package_help')} %> 
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= f.label :api_role, 'External Code (optional)', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :api_role, :class => 'text_field input-small' %>
+      <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.product.package_help')} %> 
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= f.label :description, 'Description (optional)', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_area :description, :class => 'text_area', :rows => 5 %>
+      <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.product.package_help')} %> 
+    </div>
   </div>
 </div>
 
-<div class="control-group">
-  <%= f.label :api_role, :class => 'control-label' %>
-  <div class="controls">
-    <%= f.text_field :api_role, :class => 'text_field' %>
-    <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.product.package_help')} %> 
-  </div>
+<div class="step" id="second">
+    <div class="control-group">
+      <h3 class="wizard_step">
+        <span>Step </span>
+        <span class="wizard_step_circle">1</span>
+        <span class="wizard_step_circle step_selected">2</span>
+        <span class="wizard_step_circle">3</span>
+      </h3>
+    </div>
 </div>
 
-<div class="control-group">
-  <%= f.label :description, :class => 'control-label' %>
-  <div class="controls">
-    <%= f.text_area :description, :class => 'text_area' %>
-    <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.product.package_help')} %> 
-  </div>
+<div class="step" id="third">
+    <div class="control-group">
+      <h3 class="wizard_step">
+        <span>Step </span>
+        <span class="wizard_step_circle">1</span>
+        <span class="wizard_step_circle">2</span>
+        <span class="wizard_step_circle step_selected">3</span>
+      </h3>
+    </div>
 </div>
 
-
-
-<div class="form-actions">
-  <%= f.submit nil, :class => 'btn btn-primary' %>
+<div id=""class="form-actions">
   <%= link_to t('.cancel', :default => t("helpers.links.cancel")), terms_of_memberships_path, :class => 'btn' %>
+  <div style = "float: right;">
+    <%= f.submit "clear", :id => 'back', :class => 'btn', :type => "reset" %>
+    <%= f.submit nil, :id => 'next', :class => 'btn btn-primary' %>
+  </div>
 </div>
 
 <script>
-  $(document).ready(new_product_functions())
+  $(document).ready(new_product_functions());
+
+  // Creates the wizard
+  $(function(){
+    $("#tom_wizard_form").formwizard({ 
+      formPluginEnabled: true,
+      validationEnabled: true,
+      focusFirstInput : true,
+      disableUIStyles: true,
+      textNext: 'Membership Terms',
+      textSubmit: 'Create Plan',
+      formOptions :{
+        success: function(data){$("#status").fadeTo(500,1,function(){ $(this).html("You are now registered!").fadeTo(5000, 0); })},
+        beforeSubmit: function(data){$("#data").html("data sent to the server: " + $.param(data));},
+        dataType: 'json',
+        resetForm: true
+      } 
+    });
+  });
+
+  // Updates the text of the 'Next' button based on the current step
+  $(function() {
+    $("#tom_wizard_form").bind("before_step_shown", function(event, data) {
+      switch(data.currentStep) {
+        case "first":
+          $("#tom_wizard_form").formwizard("option", {textNext: 'Membership Terms'});
+          break;
+        case "second":
+          $("#tom_wizard_form").formwizard("option", {textNext: 'Define Upgrades / Downgrades'});
+          break;
+        case "third":
+          $("#tom_wizard_form").formwizard("option", {textNext: 'Create Plan'});
+          break;
+      }
+    });
+  });
+
 </script>
