--- a/app/views/terms_of_memberships/new.html.erb
+++ b/app/views/terms_of_memberships/new.html.erb
@@ -1,5 +1,6 @@
 <%- model_class = @tom.class -%>
-<%= form_for @tom, :html => { :class => 'form-horizontal' } do |f| %>
+<h1><%=t '.title', :default => model_class.model_name.human %></h1>
+<%= form_for @tom, :html => { :id => 'tom_wizard_form', :class => 'form-horizontal bbq' } do |f| %>
 	<%= render :partial => 'form', :locals => { :f => f} %>
 <% end %>
 
@@ -10,17 +11,5 @@
 
 
 <script type="text/javascript">
-	$(function(){
-		$("#demoForm").formwizard({ 
-			formPluginEnabled: true,
-			validationEnabled: true,
-			focusFirstInput : true,
-			formOptions :{
-				success: function(data){$("#status").fadeTo(500,1,function(){ $(this).html("You are now registered!").fadeTo(5000, 0); })},
-				beforeSubmit: function(data){$("#data").html("data sent to the server: " + $.param(data));},
-				dataType: 'json',
-				resetForm: true
-			}	
-		});
-	});
+
 </script>
