[#53126001] adding test connection button for drupal

--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -74,9 +74,11 @@
   <%= link_to t(:back),
               clubs_path, :class => 'btn'  %>
   <%= link_to t(:edit),
-              edit_club_path(:id => @club.id), :class => 'btn' %>
+              edit_club_path(:id => @club.id), :class => 'btn btn-success' %>
   <%= link_to t(:new_domain),
-              new_domain_path(:club_id => @club.id), :class => 'btn' %>
+              new_domain_path(:club_id => @club.id), :class => 'btn btn-success' %>
+  <%= link_to t(:test_api_connection),
+              club_test_api_connection_path(:club_id => @club.id), :class => 'btn' %>
   <%= link_to t(:destroy),
               club_path(:id => @club.id),
               :method => 'delete',
