Moved wizard css here

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -34,9 +34,9 @@
 //}
 
 .nav {
-    list-style: none outside none;
-    margin-bottom: 0;
-    margin-left: 0;
+  list-style: none outside none;
+  margin-bottom: 0;
+  margin-left: 0;
 }
 
 .tab-content {
@@ -48,3 +48,33 @@
 .form-horizontal .form-actions {
   padding-left: 20px;
 }
+
+#tom_wizard_form h3.wizard_step {
+  line-height: 17px;
+}
+
+#tom_wizard_form .wizard_step_circle {    
+  background: #eeeeee;
+  color: black;
+  font-size: 20px;
+  border: 2px solid #ddd;
+  border-radius: 50px;
+  width: 17px;
+  height: 17px;
+  margin: 1px;
+  display: inline-block;
+  padding: 3px;
+  text-align: center;
+  font-weight: bold;
+}
+
+#tom_wizard_form .wizard_step_circle.step_selected {
+	background: #0055cc;
+	color: white;
+	border-color: #ddd;
+}
+
+#tom_wizard_form div.step {
+	display: inline-block;
+}
+
