--- a/app/views/terms_of_memberships/new.html.erb
+++ b/app/views/terms_of_memberships/new.html.erb
@@ -1,15 +1,5 @@
 <%- model_class = @tom.class -%>
-<h1><%=t '.title', :default => model_class.model_name.human %></h1>
+<h1><%=t '.title', :default => t('activerecord.attributes.terms_of_membership.wizard.title') %></h1>
 <%= form_for @tom, :html => { :id => 'tom_wizard_form', :class => 'form-horizontal bbq' } do |f| %>
 	<%= render :partial => 'form', :locals => { :f => f} %>
 <% end %>
-
-
-
-
-
-
-
-<script type="text/javascript">
-
-</script>
