Replaced with dummy text

--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -20,14 +20,14 @@
     <%= f.label :api_role, 'External Code (optional)', :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :api_role, :class => 'text_field input-small' %>
-      <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.product.package_help')} %> 
+      <%= render :partial => "shared/help", :locals => { :title => t('lorem'), :content => t('lorem')} %> 
     </div>
   </div>
   <div class="control-group">
     <%= f.label :description, 'Description (optional)', :class => 'control-label' %>
     <div class="controls">
       <%= f.text_area :description, :class => 'text_area', :rows => 5 %>
-      <%= render :partial => "shared/help", :locals => { :title => t('example'), :content => t('activerecord.attributes.product.package_help')} %> 
+      <%= render :partial => "shared/help", :locals => { :title => t('lorem'), :content => t('lorem')} %> 
     </div>
   </div>
 </div>
