--- a/app/views/terms_of_memberships/index.html.erb
+++ b/app/views/terms_of_memberships/index.html.erb
@@ -1,7 +1,7 @@
 <section>
   <div class="page-header">
     <h1>Subscription Plans</h1>
-    <% if can? :create, Product %>
+    <% if can? :create, TermsOfMembership %>
       <%= link_to(new_terms_of_membership_path, :class => "btn btn-primary btn_on_header", :id => "new_tom") do %> 
         <i class="icon-plus"></i> Add New Plan
       <% end %>
