--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(members_search_result_path, :method => 'get', :id => 'index_search_form' , :class => 'well form-inline') do |f| %>
+<%= form_tag(members_search_result_path, :method => 'get', :id => 'index_search_form' , :class => 'form-inline') do |f| %>
   <section>
     <div class="page-header">
       <h1>Search</h1>
