--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -63,14 +63,21 @@
             </ul>
           <% end %>
 
+          <ul class="nav pull-right">
+            <li class="divider-vertical"></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= I18n.t("menu.admin_menu") %> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to t('menu.agents'), admin_agents_path if can? :read, Agent %></li>
+                <li><%= link_to t('menu.partners'), admin_partners_path if can? :read, Agent %></li>
+                <li><%= link_to "DelayedJobs", admin_delayed_jobs_path if can? :read, DelayedJob %></li>
+              </ul>
+            </li>
+          </ul>
+
 
           <ul class="nav">
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-            <li><%= link_to t('menu.agents'), admin_agents_path if can? :read, Agent %></li>
-            <li><%= link_to t('menu.partners'), admin_partners_path if can? :read, Agent %></li>
-            <li><%= link_to "My Clubs", root_path %></li>
-            <li><%= link_to "DelayedJobs", admin_delayed_jobs_path if can? :read, DelayedJob %></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+            <li><%= link_to "My Clubs", root_path, {id: "my_clubs"} %></li>
             <li>
               <% selected = @current_club ? [ members_path(@current_partner.prefix, @current_club.name) ] : nil %>
               <%= select_tag "change_partner",
