Using helper function to create the selects. Updated texts for when a label is not set

--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -61,7 +61,7 @@
       $&nbsp;<%= f.text_field :provisional_days, :class => 'text_field input-small', :value => '0.00' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.lasting') %>
       <%= f.text_field :provisional_days, :class => 'text_field input-small', :value => '0' %>
-      <%= select_tag "provisional_days_time_span", options_for_select(@dates_span), :class => 'input-small' %>
+      <%= select_date_span("provisional_days_time_span") %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.provisional_days'), 
         :content => t('lorem') } %> 
@@ -87,7 +87,7 @@
       $&nbsp;<%= f.text_field :recurring_amount, :class => 'text_field input-small', :value => '0.00' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.every') %>
       <%= f.text_field :recurring_amount_days, :class => 'text_field input-small', :value => '0' %>
-      <%= select_tag "recurring_amount_days_time_span", options_for_select(@dates_span), :class => 'input-small' %>
+      <%= select_date_span("recurring_amount_days_time_span") %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.recurring_amount'), 
         :content => t('lorem') } %> 
@@ -103,7 +103,7 @@
       <%= radio_button_tag 'suscription_terms', 'stop_cancel_after' %>
       <span id="label_for_stop_billing_after"><%= t('activerecord.attributes.terms_of_membership.wizard.stop_billing_after') %></span>
       <%= f.text_field :suscription_terms_stop_billing_after_payment_days, :class => 'text_field input-small', :value => '0' %>
-      <%= select_tag "suscription_terms_stop_billing_after_payment_days_time_span", options_for_select(@dates_span), :class => 'input-small' %>
+      <%= select_date_span("suscription_terms_stop_billing_after_payment_days_time_span") %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.suscription_terms'), 
         :content => t('lorem') } %> 
@@ -130,7 +130,7 @@
       <%= radio_button_tag 'if_cannot_bill_member', 'suspend_for' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.suspend_for') %>
       <%= f.text_field :suscription_terms_stop_billing_after_payment_days, :class => 'text_field input-small', :value => '0' %>
-      <%= select_tag "suscription_terms_stop_billing_after_payment_days_time_span", options_for_select(@dates_span), :class => 'input-small' %>
+      <%= select_date_span("suscription_terms_stop_billing_after_payment_days_time_span") %>
       <br />
       <%= radio_button_tag 'if_cannot_bill_member', 'downgrade_to' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.downgrade_to') %>
@@ -176,7 +176,8 @@
   });
 
   function update_labels() {
-    var radio1_text, radio2_text;
+    var radio1_text = 'NOT_SET';
+    var radio2_text = 'NOT_SET';
     if (window.at_the_end_of_trial == 'payment') {
       radio1_text = '<%= t('activerecord.attributes.terms_of_membership.wizard.bill_until_cancelled') %>';
       radio2_text = '<%= t('activerecord.attributes.terms_of_membership.wizard.stop_billing_after') %>';
@@ -191,7 +192,7 @@
 
   function set_button_next_label(currentStep) {
     var isSubmitButton = false;
-    var buttonText = '<NOT_SET>';
+    var buttonText = 'NOT_SET';
     switch(currentStep) {
       case "first":
         buttonText = '<%= t('activerecord.attributes.terms_of_membership.wizard.step_1_button_next') %>';
